Face Set visibility is reverted when toggling local view or face set overlay while working with Multires subdivisions #78665

Closed
opened 2020-07-06 13:02:45 +02:00 by Julien Kaspar · 10 comments
Member

System Information
Operating system: Linux-5.3.0-59-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 08:27, hash: 80393a0eba

Short description of error
This only happens when sculpting on multires modifier subdivisions.
It happens regularly, most notably when toggling local view on an object or the face set overlay, that the currently hidden face sets become visible again.
When trying to hide other face sets, the viewport will catch up again and hide the previously hidden face sets, as though it just didn't remember that they were supposed to be hidden.

Steps to reproduce the bug

  • Enter sculpt mode on an object
  • Paint a few different face set colors
  • Add a multires modifier and subdivide a couple times
  • Hide a couple face sets while having the object subdivided
  • Toggle local view or the face set overlay
**System Information** Operating system: Linux-5.3.0-59-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 08:27, hash: `80393a0eba` **Short description of error** This only happens when sculpting on multires modifier subdivisions. It happens regularly, most notably when toggling local view on an object or the face set overlay, that the currently hidden face sets become visible again. When trying to hide other face sets, the viewport will catch up again and hide the previously hidden face sets, as though it just didn't remember that they were supposed to be hidden. **Steps to reproduce the bug** - Enter sculpt mode on an object - Paint a few different face set colors - Add a multires modifier and subdivide a couple times - Hide a couple face sets while having the object subdivided - Toggle local view or the face set overlay
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#79326 was marked as duplicate of this issue

#79326 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce actually.
What are the exact steps to reproduce this?

Cannot reproduce actually. What are the exact steps to reproduce this?
Author
Member

@lichtwerk I experimented a bit more and I found out that I left a step out of the description. You need to have work with multires subdivisions. I will update the bug report.

@lichtwerk I experimented a bit more and I found out that I left a step out of the description. You need to have work with multires subdivisions. I will update the bug report.
Julien Kaspar changed title from Face Set visibility is reverted when toggling local view or face set overlay to Face Set visibility is reverted when toggling local view or face set overlay while working with Multires subdivisions 2020-07-06 15:02:08 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @AntoineRol

Added subscriber: @AntoineRol

This issue was referenced by 3ebe97c06b

This issue was referenced by 3ebe97c06b67d1611dfeaa3919512155416b0378
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-08-04 23:34:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78665
No description provided.